github action: extra gem net-ssh#478

--- a/.github/workflows/default.yml
+++ b/.github/workflows/default.yml
@@ -102,7 +102,11 @@ jobs:
           sudo gem install kitchen-ansible
           sudo gem install kitchen-sync
           sudo gem install kitchen-lxd_cli
-          ssh-keygen -t rsa -b 2048 -f ~/.ssh/id_rsa -P ""
+          sudo apt-get install -y libsodium23
+          sudo gem install rbnacl --version 4.0.2
+          sudo gem install bcrypt_pbkdf rbnacl-libsodium
+          sudo -H ssh-keygen -t ed25519 -f /root/.ssh/id_rsa -P ""
+          sudo ls -lA /root/.ssh/
           cd $GITHUB_WORKSPACE/juju4.misp && sudo kitchen diagnose --all
       # https://github.com/actionshub/test-kitchen
       - name: Install Chef
