testing: composer not as root

--- a/tasks/testing.yml
+++ b/tasks/testing.yml
@@ -28,6 +28,8 @@
     - composer --version
   changed_when: false
   ignore_errors: true
+  become: yes
+  become_user: "{{ www_user }}"
 - name: pip dependencies for testing
   pip:
     name: ['coveralls', 'codecov', 'nose', 'requests-mock', 'poetry']
