resync php modules with docs/INSTALL.ubuntu*

--- a/vars/Ubuntu-20.04.yml
+++ b/vars/Ubuntu-20.04.yml
@@ -6,6 +6,15 @@ misp_pkg_list:
  - php
  - php-mysql
  - php-mbstring
+ - php7.4-opcache
+ - php-readline
+ - php-mbstring
+ - php-zip
+ - php-redis
+ - php-gnupg
+ - php-intl
+ - php-bcmath
+ - php-gd
  - postfix
  - gcc
  - zip
