--- a/tasks/composer.yml
+++ b/tasks/composer.yml
@@ -24,8 +24,10 @@
   ignore_errors: true
 
 - block:
-    - debug: var=installer.stat.checksum
-    - debug: var=installersig.stdout
+    - name: Debug | installer var
+      debug: var=installer.stat.checksum
+    - name: Debug | installersig var
+      debug: var=installersig.stdout
     - name: check composer signature
       fail: msg="FATAL! composer signature not matching."
   when: installer.stat.checksum != installersig.stdout
