--- a/tasks/redhat.yml
+++ b/tasks/redhat.yml
@@ -79,7 +79,8 @@
 
 # https://github.com/ansible/ansible/issues/16612
 - block:
-    - debug: var=ansible_selinux
+    - name: Debug | ansible_selinux var
+      debug: var=ansible_selinux
     - name: RedHat7- | Ensure selinux dependencies are present
       package:
         name: libselinux-python
@@ -96,7 +97,8 @@
       when: ansible_os_family == "RedHat" and ansible_distribution_major_version|int >= 8
     - name: re-collect facts
       action: setup
-    - debug: var=ansible_selinux
+    - name: Debug | ansible_selinux var
+      debug: var=ansible_selinux
   when: ansible_os_family == "RedHat"
 - block:
     - name: RedHat | Ensure selinux dependencies are present
