--- a/vars/RedHat-8.yml
+++ b/vars/RedHat-8.yml
@@ -12,6 +12,8 @@ misp_pkg_list:
  - php-devel
  # - php-redis
  - php-opcache
+ - php-xml
+ - php-gd
  - php-json
  - postfix
  - "@Development tools"
