github action: add centos7 and 8 (2)

--- a/.github/workflows/default.yml
+++ b/.github/workflows/default.yml
@@ -103,7 +103,7 @@ jobs:
           sudo zpool list
           sudo lxc profile device add default root disk path=/ pool=pool1
           sudo lxc profile show default
-          [ "X${{ matrix.distribution }}" == "Xcentos" ] && cd $GITHUB_WORKSPACE/juju4.orchestrator && sudo sh -x ./test/lxd/centos-ssh-image.sh ${{ matrix.version }} || true
+          [ "X${{ matrix.distribution }}" == "Xcentos" ] && cd $GITHUB_WORKSPACE/juju4.misp && sudo sh -x ./test/lxd/centos-ssh-image.sh ${{ matrix.version }} || true
       - name: Install kitchen requirements
         run: |
           sudo gem install test-kitchen --version "=1.25.0"
