--- a/tasks/redhat.yml
+++ b/tasks/redhat.yml
@@ -18,6 +18,10 @@
     mode: '0644'
   when: ansible_os_family == "RedHat" and ansible_distribution_major_version|int >= 8
 
+- name: Check available repositories
+  command: dnf repolist
+  changed_when: false
+
 - name: yum | MISP dependencies install
   yum:
     name: "{{ misp_pkg_list + webserver }}"
