--- a/tasks/redhat.yml
+++ b/tasks/redhat.yml
@@ -14,7 +14,7 @@
     dest: /etc/yum.repos.d/CentOS-PowerTools.repo
     section: PowerTools
     option: enabled
-    value: 1
+    value: '1'
     mode: '0644'
   when: ansible_os_family == "RedHat" and ansible_distribution_major_version|int >= 8
 
