rhel/centos8: review packages list (2)

--- a/vars/RedHat-8.yml
+++ b/vars/RedHat-8.yml
@@ -3,8 +3,8 @@
 misp_pkg_list:
  - openssh-server
  - httpd
- - mysql
- - mysql-server
+ - mariadb
+ - mariadb-server
  - php
  - php-mysqlnd
  - php-mbstring
